<resources>
    <string name="app_name">Lab2</string>
    <string name="player_1">Player_1</string>
    <string name="player_2">Player 2</string>
    <string name="score">Score</string>
    <string name="who">"'s turn"</string>
    <string name="points_this_turn">Points for this turn</string>
    <string name="roll_die">Roll Die</string>
    <string name="end_turn">End Turn</string>
    <string name="new_game">New Game</string>
</resources>
